# Smart_IoT_olio-ohjelmointi_s25

./: CMakeLists.txt
Lab 1/: Lab 1-Task 1-simple c++ program.cpp  Task 2-using reference parameter.cpp
Lab 2/: Lab 2-Task 1-String streams.cpp  Task 1-String streams.cpp  Task 2-File system.cpp
Lab 3/: Lab 3-Task 1-Using std map and std pair.cpp  Lab 3-Task 2-Composition.cpp  Task 1-Using std map and std pair.cpp
Lab 4/: Lab 4-Operator overloading.cpp  Task 1-Operator overloading.cpp  Testi ja esimerkki koodipätkiä.cpp
Lab 6/: Lab 6-Smart pointers.cpp
Lab 7/: Lab 7-Inheritance.cpp  lab7_main.cpp
Lab 8/: Lab8-Abstract_class.cpp  Lab8-Abstract_class.h  Lab8_main.cpp
